fix anonymous link in exists